<resources>

    <string name="app_name">MatchGame</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_round1">Round1</string>
    <string name="title_activity_round2">Round2</string>
    <string name="title_activity_round3">Round3</string>
    <string name="title_activity_game_over">GameOver</string>
    <string name="title_activity_game_play">GamePlay</string>
    <string name="question">Question/phrase</string>
    <string name="rtwointro">Hello and Welcome Back! \nMoving on today we have \n<b>Winner of round 1</b>.</string>
    <string name="rtworules">In this round, our player will get responses from three of our guests. Our player may 
        choose to take one of their answers or select their own. If the selected answer matches one of the corresponding 
        prizes, our champion will have the corresponding amount added to their prize money.</string>
    <string name="rtwostart">Now, let\'s get this round started!</string>
    <string name="rtwoanswers">Let us see how that response matches up. </string>
    <string name="rtwoend">Time to move onto the final round where we will go on to see if we can multiply your winnings by 10.</string>
    <string name="player1">Player 1</string>
    <string name="player2">Player 2</string>
    <string name="guest1">Guest 1</string>
    <string name="guest2">Guest 2</string>
    <string name="guest3">Guest 3</string>
    <string name="guest4">Guest 4</string>
    <string name="guest5">Guest 5</string>
    <string name="guest6">Guest 6</string>
    <string name="answer">\u003F\u003F\u003F\u003F\u003F</string>
    <string name="c">500</string>
    <string name="b">250</string>
    <string name="a">100</string>
    <string name="selectOwn">Select Own</string>
    <string name="submit">Submit</string>
    <string name="continue_">Continue</string>
    <string name="continuefinal">Continue to Final Round</string>
    
    <string name="log_in">LOG IN</string>
    <string name="guest">Guest</string>
    <string name="sign_up">Sign up</string>
    
    <color name="white">#FFFFFF</color>

</resources>