<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/AbsoluteLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="32dp"
        android:layout_y="13dp"
        android:src="@drawable/chair" />

    <TextView
        android:id="@+id/txtAnswerFinal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="268dp"
        android:layout_y="51dp"
        android:text="@string/answer"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/txtGuest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="23dp"
        android:layout_y="98dp"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/txtPhrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="21dp"
        android:layout_y="168dp"
        android:text="@string/question"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/answer"
        android:layout_width="187dp"
        android:layout_height="wrap_content"
        android:layout_x="230dp"
        android:layout_y="156dp"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnFinalSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="442dp"
        android:layout_y="197dp"
        android:text="@string/submit" />

</AbsoluteLayout>