<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/AbsoluteLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_x="20dp"
        android:layout_y="90dp"
        android:src="@drawable/chair" />

    <ImageView
        android:id="@+id/ImageView01"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_x="90dp"
        android:layout_y="90dp"
        android:src="@drawable/chair" />

    <ImageView
        android:id="@+id/ImageView02"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_x="470dp"
        android:layout_y="160dp"
        android:src="@drawable/chair" />

    <ImageView
        android:id="@+id/ImageView03"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_x="400dp"
        android:layout_y="160dp"
        android:src="@drawable/chair" />

    <ImageView
        android:id="@+id/ImageView04"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_x="330dp"
        android:layout_y="160dp"
        android:src="@drawable/chair" />

    <ImageView
        android:id="@+id/ImageView07"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_x="400dp"
        android:layout_y="50dp"
        android:src="@drawable/chair" />

    <ImageView
        android:id="@+id/ImageView06"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_x="330dp"
        android:layout_y="50dp"
        android:src="@drawable/chair" />

    <ImageView
        android:id="@+id/ImageView05"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_x="470dp"
        android:layout_y="50dp"
        android:src="@drawable/chair" />

    <TextView
        android:id="@+id/txtRoundOneQuestion"
        android:layout_width="508dp"
        android:layout_height="wrap_content"
        android:layout_x="11dp"
        android:layout_y="4dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="17dp" />

    <ImageView
        android:id="@+id/imvMatchGame"
        android:layout_width="155dp"
        android:layout_height="118dp"
        android:layout_x="160dp"
        android:layout_y="52dp"
        android:src="@drawable/title" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="200dp"
        android:layout_y="170dp"
        android:src="@drawable/host" />

    <TextView
        android:id="@+id/txtGamePlayPlayerOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="20dp"
        android:layout_y="150dp"
        android:text="@string/player1"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/txtGamePlayPlayerTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="90dp"
        android:layout_y="150dp"
        android:text="@string/player2"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/txtGuestOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="330dp"
        android:layout_y="105dp"
        android:text="@string/guest1"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/txtGuestTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="400dp"
        android:layout_y="105dp"
        android:text="@string/guest2"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/txtGuestThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="472dp"
        android:layout_y="104dp"
        android:text="@string/guest3"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ImageView
        android:id="@+id/imgPlayerOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="23dp"
        android:layout_y="76dp"
        android:src="@drawable/ic_launcher" />

    <ImageView
        android:id="@+id/imgPlayerTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="94dp"
        android:layout_y="76dp"
        android:src="@drawable/ic_launcher" />

    <ImageView
        android:id="@+id/ImageView09"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="334dp"
        android:layout_y="33dp"
        android:src="@drawable/ic_launcher" />

    <ImageView
        android:id="@+id/ImageView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="404dp"
        android:layout_y="33dp"
        android:src="@drawable/ic_launcher" />

    <ImageView
        android:id="@+id/ImageView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="474dp"
        android:layout_y="33dp"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/txtGuestSix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="470dp"
        android:layout_y="215dp"
        android:text="@string/guest6"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/txtGuestFive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="400dp"
        android:layout_y="215dp"
        android:text="@string/guest5"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/txtGuestFour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="330dp"
        android:layout_y="215dp"
        android:text="@string/guest4"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ImageView
        android:id="@+id/ImageView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="473dp"
        android:layout_y="144dp"
        android:src="@drawable/ic_launcher" />

    <ImageView
        android:id="@+id/ImageView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="403dp"
        android:layout_y="144dp"
        android:src="@drawable/ic_launcher" />

    <ImageView
        android:id="@+id/ImageView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="334dp"
        android:layout_y="144dp"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/txtGuestOneAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="330dp"
        android:layout_y="123dp" />

    <TextView
        android:id="@+id/txtGuestFourAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="330dp"
        android:layout_y="232dp" />

    <TextView
        android:id="@+id/txtGuestTwoAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="400dp"
        android:layout_y="123dp"/>

    <TextView
        android:id="@+id/txtGuestThreeAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="472dp"
        android:layout_y="123dp" />

    <TextView
        android:id="@+id/txtGuestFiveAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="400dp"
        android:layout_y="232dp" />

    <TextView
        android:id="@+id/txtGuestSixAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="470dp"
        android:layout_y="232dp" />

    <TextView
        android:id="@+id/txtPlayerOneAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="20dp"
        android:layout_y="170dp" />

    <TextView
        android:id="@+id/txtPlayerTwoAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="90dp"
        android:layout_y="170dp" />

    <Button
        android:id="@+id/btnGoToRoundTwo"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="223dp"
        android:layout_y="24dp"
        android:text="Go to round 2" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="20dp"
        android:layout_y="215dp"
        android:text="Scores" />

    <TextView
        android:id="@+id/txtPlayerOneScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="20dp"
        android:layout_y="238dp"
        android:text="0" />

    <TextView
        android:id="@+id/txtPlayerTwoScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="90dp"
        android:layout_y="238dp"
        android:text="0" />

</AbsoluteLayout>